crates/zendriver-mcp/tests/snapshots/schema_snapshots__actions_set_value_mode.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::actions::SetValueMode)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: SetValueMode
description: "Which property `browser_set_value` writes."
oneOf:
  - description: "Set the element's `.value` property + fire `input`/`change` (form\nfields). Default."
    type: string
    const: value
  - description: "Set the element's `textContent` (non-form elements like `<div>`)."
    type: string
    const: text
