crates/zendriver-mcp/tests/snapshots/schema_snapshots__actions_type_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::actions::TypeInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: TypeInput
description: "Input for `browser_type`."
type: object
properties:
  clear_first:
    description: "When `true`, call `clear()` on the element before typing.\nUseful for replacing the contents of a pre-filled input. Default: `false`."
    type: boolean
    default: false
  css:
    type:
      - string
      - "null"
  frame_id:
    type:
      - string
      - "null"
  nth:
    type:
      - integer
      - "null"
    format: uint
    minimum: 0
  return_snapshot:
    description: "When `true`, include the trimmed page HTML in the response."
    type: boolean
    default: false
  role:
    type:
      - string
      - "null"
  role_name:
    type:
      - string
      - "null"
  text:
    description: "Text to type, character-by-character with realistic timing."
    type: string
  text_exact:
    type:
      - string
      - "null"
  text_regex:
    type:
      - string
      - "null"
  timeout_ms:
    type: integer
    format: uint64
    default: 5000
    minimum: 0
  visible_only:
    type: boolean
    default: true
  xpath:
    type:
      - string
      - "null"
additionalProperties: false
required:
  - text
