crates/zendriver-mcp/tests/snapshots/schema_snapshots__cookies_cookie_dto.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::cookies::CookieDto)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: CookieDto
description: "Wire-only mirror of [`zendriver::Cookie`] — see module docs.\n\nField set + serde shape match the lib's `Cookie` exactly, so a `Vec<Cookie>`\nserialized by the lib parses cleanly as `Vec<CookieDto>` and vice versa.\nAdding [`JsonSchema`] here (without touching the lib) lets rmcp synthesize\ntool schemas."
type: object
properties:
  domain:
    description: "Domain the cookie applies to. Leading dot (`.example.com`) matches\nthe domain and all subdomains."
    type: string
  expires:
    description: "Expiration timestamp in seconds since Unix epoch. `None` for a\nsession cookie."
    type:
      - number
      - "null"
    format: double
  http_only:
    description: "`true` if the cookie has the `HttpOnly` flag."
    type: boolean
    default: false
  name:
    description: Cookie name.
    type: string
  path:
    description: "URL path the cookie applies to (typically `\"/\"`)."
    type: string
  same_site:
    description: "SameSite policy, if specified."
    anyOf:
      - $ref: "#/$defs/SameSiteDto"
      - type: "null"
  secure:
    description: "`true` if the cookie is only sent over HTTPS."
    type: boolean
    default: false
  url:
    description: "Origin URL for set-side convenience. CDP infers `domain` + `path` +\n`secure` when present. Always `None` on cookies returned by reads."
    type:
      - string
      - "null"
  value:
    description: Cookie value.
    type: string
required:
  - name
  - value
  - domain
  - path
$defs:
  SameSiteDto:
    description: "SameSite policy mirror of [`zendriver::SameSite`].\n\nSerializes with the same `\"Strict\" / \"Lax\" / \"None\"` capitalization as\nthe lib's enum (which matches the RFC and CDP), so on-the-wire payloads\nstay identical to what `zendriver::Cookie`'s own serde emits."
    oneOf:
      - description: First-party only — never sent on cross-site requests.
        type: string
        const: Strict
      - description: Sent on cross-site top-level navigations only.
        type: string
        const: Lax
      - description: "Always sent, including in third-party contexts."
        type: string
        const: None
